fix: z-index

--- a/src/components/ServiceWorkerWrapper.module.scss
+++ b/src/components/ServiceWorkerWrapper.module.scss
@@ -7,6 +7,7 @@
   width: 100%;
   background: $white;
   padding: 10px 0;
+  z-index: 105;
 
   p {
     text-align: center;
